# gage-save

./: .gitignore  AUTHORS.md  CONTRIBUTING.md  Makefile  README.md  STYLE.md  TODO.md  gage.py  gage.spec  gagefile.schema.json  pyproject.toml  requirements.txt
examples/c2pa/: vistaml.json
examples/config/: config.json  config1.json  config2.json  train.py  train_config.py  vistaml.json  vistaml.yaml
examples/get-started/: train_annotated.py
examples/hello/: gage.json  gage.toml  hello.py
examples/hydra/: gage.toml  guild.yml  my_app.py
examples/progress/: gage.toml
examples/sourcecode/: gage.toml
examples/stages/: gage.toml
gage/: __init__.py  __main__.py  api.py  gagefile.schema.DELME.json  gagefile.schema.json  userconfig.schema.json
gage/_internal/: ansi_util.py  attr_log.py  channel.py  cli.py  click_util.py  config.py  file_select.py  file_util.py  gagefile.py  lang.py  log.py  nu.py  op_util.py  opdef.py  opdef_util.py  opref_util.py  plugin.py  project.py  project_util.py  python_util.py  remote.py  remote_rclone.py  run_config.py  run_config_py.py  run_context.py  run_help.py  run_manifest.py  run_output.py  run_progress.py  run_select.py  run_sourcecode.py  run_util.py  schema_util.py  sys_config.py  test.py  typer_rich_util.py  types.py  user_config.py  util.py  var.py  (+1 more)
gage/_internal/commands/: ac_support.py  associate.py  associate_impl.py  check.py  check_impl.py  command_types.py  comment_impl.py  copy.py  copy_impl.py  error_handlers.py  help.py  impl_support.py  impl_util.py  label.py  label_impl.py  main.py  main_impl.py  open.py  open_impl.py  operations.py  operations_impl.py  run.py  run_impl.py  runs.py  runs_archive.py  runs_comment.py  runs_delete.py  runs_delete_impl.py  runs_export.py  runs_import.py  runs_info.py  (+18 more)
gage/help/: exec.md  filters.md  gagefile.md  operations.md
gage/schema/: gagefile.json
tests/: cmd-check.md  cmd-delete.md  cmd-help.md  cmd-list.md  cmd-main.md  cmd-open.md  cmd-operations.md  cmd-purge.md  cmd-restore.md  cmd-run-preview-sourcecode.md  cmd-run-stage.md  cmd-run.md  cmd-runs-list.md  cmd-runs.md  cmd-select.md  cmd-show.md  example-hello.md  example-hydra.md  lib-file-select.md  lib-file-util.md  lib-gagefile.md  lib-log.md  lib-plugin.md  lib-project-util.md  lib-python-util.md  lib-run-comment.md  lib-run-config-py.md  lib-run-config.md  lib-run-output.md  lib-run-select.md  lib-run-util.md  lib-test.md  lib-user-config.md  lib-util.md  lib-var.md  proj-imports.md  project-imports.md  run-fs-layout-DELME.md  run-fs-layout.md  run-lifecycle-1-make-run.md  (+12 more)
vml/: __init__.py  __main__.py
vml/_internal/: cli.py  click_util.py  config.py  file_util.py  log.py  op.py  op_util.py  opdef.py  opdef_util.py  plugin.py  project.py  python_util.py  run.py  run_manifest.py  run_util.py  test.py  util.py  var.py  vcs_util.py  yaml_util.py
(+53 files in other folders)
