[project]

name = "vistaml"
version = "0.1.0"
authors = [
  { name="Garrett Smith", email="garrett@placeon.earth" },
]
description = "ML experiment tracking and model optimization"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

[project.scripts]

vml = "vml.__main__:main"

[project.urls]

"Homepage" = "https://github.com/vistaml/vistaml"
"Bug Tracker" = "https://github.com/vistaml/vistaml/issues"

[tool.black]

skip-string-normalization = true
extend-exclude = "/tests/"

[tool.groktest]

include = "tests/*.md"
python.init = "from vml._internal.test import *"
parse.functions = "vml._internal.test"
