[project]

name = "gage"
version = "0.1.0"
authors = [
  { name="Garrett Smith", email="garrett@placeon.earth" },
]
description = "ML experiment tracking and model optimization"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]

dependencies = [
    "chardet",
    "natsort",
    "psutil",
    "pyyaml"
]

[project.scripts]

gage = "gage.__main__:main"

[project.urls]

"Homepage" = "https://github.com/gageml/gage"
"Bug Tracker" = "https://github.com/gageml/gage/issues"

[tool.setuptools]

packages = ["gage"]

[tool.black]

skip-string-normalization = true
extend-exclude = "/tests/"

[tool.groktest]

include = "tests/*.md"
python.init = "from gage._internal.test import *"
parse.functions = "gage._internal.test"
